--- a/src/main/java/plugin.yml
+++ b/src/main/java/plugin.yml
@@ -1,3 +1,8 @@
 name: ArcaneCrafts
 main: org.inclusiverec.arcanecrafts.ArcaneCrafts
 version: 0.0.1
+
+commands:
+    arcanecrafts:
+        description: Basic command for ArcaneCrafts
+        usage: /arcanecrafts help for list of available commands.
