--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
     <name>ArcaneCrafts</name>
     <url>http://maven.apache.org</url>
 
+
+    <properties>
+    <jdk.version>1.8</jdk.version>
+    </properties>
+
     <build>
         <resources>
             <resource>
@@ -18,10 +23,18 @@
                 </includes>
             </resource>
         </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
-    <properties>
-        <jdk.version>1.8</jdk.version>
-    </properties>
 
     <dependencies>
 
